ecmascript/parser/tests/test262-error-references/fail/cbc35276c97fcf51.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/cbc35276c97fcf51.js:1:2
  |
1 | ((a)) => 1
  |  ^^^

